# Submissions_C2

./: .gitignore  DISTRIBUTION_CHECKLIST.md  DISTRIBUTION_GUIDE.md  Day_2_Hugging_Face_and_Gradio.ipynb  Project4_Insight_Report_Guide.docx  Prompt_pr4 (1).docx  README.md  Ravindra_summarize_text_and_export.ipynb  Summarization.ipynb  config.py  create_folders.sh  insight_agent.py  locationservice.py  main.py  report_agent.py  requirements.txt  research_input_example.json  setup.sh
Prasanna_Neelavar/Day-6/: RAG_LlamaIndex_LanceDB_FixLog.md  README.md  datasets-check.py  pyproject.toml  rag_llamaindex_lancedb.md  rag_llamaindex_lancedb.py  version-check.py
Prasanna_Neelavar/Hackathon-Group-3/mediscout/: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
Prasanna_Neelavar/Hackathon-Group-3/mediscout/docs/ai-personas/: 31_ux-designer.md  32_conversational-ux-designer.md  README.md
Prasanna_Neelavar/Hackathon-Group-3/mediscout/docs/project-docs/: architecture-mvp.md  hackathon-topics.md  prd.md  project-brief.md  project-plan.md  project-structure.md  pubmed-developer-notes.md  tdd-pending-items.md  technical-design-mvp.md
Prasanna_Neelavar/Hackathon-Group-3/mediscout/src/mediscout/: __init__.py  config.py  knowledge_base.py  orchestrator.py  schemas.py  state.py  streamlit_callback.py
Prasanna_Neelavar/Hackathon-Group-3/mediscout/src/mediscout/agents/: __init__.py  critical_analysis.py  report_builder.py  retriever.py  validate_query.py
Prasanna_Neelavar/Hackathon-Group-3/mediscout/src/mediscout/models/: __init__.py  domain.py
(+693 files in other folders)
