[project]
name = "mediscout"
version = "0.1.0"
description = "MediScout - Multi-Agent AI Medical Researcher"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.28.0",
    "pypdf>=3.17.0",
    "httpx>=0.25.0",
    "biopython>=1.81",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
]
